--- a/index.html
+++ b/index.html
@@ -48,11 +48,13 @@
         <!-- Hero -->
         <div class="hero">
             <!-- Hero image -->
-            <picture>
-                <source media="(min-width: 40rem) and (max-width: 64rem)" srcset="./images/medium.jpg">
-                <source media="(min-width: 64rem)" srcset="./images/large.jpg">
-                <img src="./images/small.jpg" alt="Hero Image">
-            </picture>
+            <div class="hero-img">
+                <picture>
+                    <source media="(min-width: 40rem) and (max-width: 64rem)" srcset="./images/medium.jpg">
+                    <source media="(min-width: 64rem)" srcset="./images/large.jpg">
+                    <img src="./images/small.jpg" alt="Hero Image">
+                </picture>
+            </div>
             <!-- Hero text -->
             <div class="hero-text">
                 <h2>We take care of everything</h2>              
