--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         </nav>
         <!-- Side Menu -->
         <div id="side-menu" class="side-nav">
-            <a href="./index.html" class="active">Home</a>
-            <a href="./temples.html">Temples</a>
-            <a href="./reservation.html">Reservation</a>
+            <a href="./" class="active">Home</a>
+            <a href="./temples/">Temples</a>
+            <a href="./reservation/">Reservation</a>
             <a href="./services/">Services</a>
         </div>
         <!-- Hero -->
