add: tempes page

--- a/temples/index.html
+++ b/temples/index.html
@@ -40,9 +40,42 @@
             <a href="../reservation/">Reservation</a>
             <a href="../services/">Services</a>
         </div>
+        <div class="hero">
+            <div class="hero-img">
+                <picture>
+                    <source media="(min-width: 40rem) and (max-width: 64rem)" srcset="../images/medium3.jpg">
+                    <source media="(min-width: 64rem)" srcset="../images/large3.jpg">
+                    <img src="../images/small3.jpg" alt="Hero Image">
+                </picture>
+            </div>
+            <div class="hero-text">
+                <h2>Holiness to the Lord</h2>              
+                <p>The House of the Lord</p>
+            </div>
     </header>
     <main class="temples-main">
         <h1>Temples</h2>
+        <div class="statistics">
+            <div class="temple-total">
+                <span class="temple-num">282</span>
+                <p>Total</p>
+            </div>
+            <div class="temple-dedicated">
+                <span class="temple-num">170</span>
+                <p>Dedicated</p>
+            </div>
+            <div class="temple-construction">
+                <span class="temple-num">46</span>
+                <p>Under Construction</p>
+            </div>
+            <div class="temple-announced">
+                <span class="temple-num">66</span>
+                <p>Announced</p>
+            </div>
+            <p>The construction and renovation of Latter-day Saint temples is determined by the Church's First Presidency.<br>New temple locations are most often announced at the Church's semiannual General Conference meetings.</p>
+        </div>
+        <h1>Gallery</h1>
+        <div class="temples-grid" id="temples-grid"></div>
     </main>
     <footer>
         <div class="footer-cont">
