add: services page and favicons

--- a/reservation/index.html
+++ b/reservation/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Temple Inn & Suites reservation page.">
-    <title>Temple Inn & Suites</title>
+    <title>Reservation</title>
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/small.css">
     <link rel="stylesheet" href="../css/medium.css">
@@ -55,7 +56,7 @@
         </div>
     </header>
     <main class="reservation-main">
-        <form action="get" action="successfullysent.html" class="reservation-form">
+        <form method="get" action="successfullysent.html" class="reservation-form">
             <h1>Make a reservation</h1>
             <hr>
             <fieldset>
