--- a/services/index.html
+++ b/services/index.html
@@ -45,7 +45,7 @@
             <a href="../">Home</a>
             <a href="../temples/">Temples</a>
             <a href="../reservation/">Reservation</a>
-            <a class="side-dropmenu" href="../services/">Services&#9662;</a>
+            <a class="side-dropmenu active" href="../services/">Services&#9662;</a>
             <a href="../services/reception/">Reception</a>
             <a href="../services/temple-missionary/">Temple Missionaries</a>
         </div>
@@ -65,7 +65,31 @@
         </div>
     </header>
     <main class="services-main">
-        
+        <div class="services">
+            <h1>Our Services</h1>
+            <ul>
+                <li>- Free access to changing rooms and bathroom facilities for temple patrons who have traveled far and need to change to and from church clothes</li><br>
+                <li>- A playroom and low-cost, short-term babysitting services for the children of patrons</li><br>
+                <li>- Long-term stay accommodations in kitchenette suites for full-time temple missionaries</li><br>
+                <li>- Temple history themed reception and sitting area</li><br>
+                <li>- A wedding reception hall that can be easily customized with a simple catering menu and kitchen access for food preparation and serving</li><br>
+                <li>- A family search center that supports family search and ordinance work</li><br>
+            </ul>
+        </div>
+        <img src="../images/services.jpg" alt="Temple Inn & Suites services">
+        <div class="amenities">
+            <h1>Free Amenities</h1>
+            <ul>
+                <li>- Breakfast</li><br>
+                <li>- Exercise/workout room</li><br>
+                <li>- Indoor pool</li><br>
+                <li>- WiFi high-speed internet access and smart TVs</li><br>
+                <li>- Parking</li><br>
+                <li>- Temple shuttle</li><br>
+                <li>- Family history consultation and family ordinance card service</li><br>
+            </ul>
+        </div>   
+        <img src="../images/service-hotel.jpg" alt="Temple Inn & Suites services">
     </main>
     <footer>
         <div class="footer-cont">
