fix: spelling errors

--- a/services/reception/index.html
+++ b/services/reception/index.html
@@ -58,7 +58,7 @@
                 </picture>
             </div>
             <div class="hero-text">
-                <h2>Your experience matter</h2>              
+                <h2>Your experience matters</h2>              
                 <p>We promise the best service</p>
             </div>
             <a href="../../reservation/" class="call-to-action">Reserve now!</a>
