fix: HTML validation errors

--- a/reservation/index.html
+++ b/reservation/index.html
@@ -141,6 +141,7 @@
             <p>© <span id="currentYear"></span> Temple Inn & Suites | Alvaro B. Godoy | WDD 230 Final Project<span> |</span></p>
             <p id="lastUpdate"></p>
         </div>
+        </div>
     </footer>
     <script src="../js/menu.js"></script>
     <script src="../js/footer.js"></script>
