--- a/services/reception/index.html
+++ b/services/reception/index.html
@@ -68,23 +68,23 @@
         <div class="services">
             <h1>Wedding accommodations services</h1>
             <ul>
-                <li>- Daily activities specially designed for new couples</li><br>
-                <li>- Waiting room for guests</li><br>
-                <li>- Transportation included</li><br>
-                <li>- Special room equiped with private pool, king-size bed, and private patio</li><br>
+                <li>- Daily activities specially designed for new couples<br></li>
+                <li>- Waiting room for guests<br></li>
+                <li>- Transportation included<br></li>
+                <li>- Special room equiped with private pool, king-size bed, and private patio<br></li>
             </ul>
         </div>
         <img src="../../images/wedding1.webp" alt="Temple Inn & Suites services">
         <div class="setup">
             <h1>Food and Setup</h1>
             <ul>
-                <li>- Variety of menus</li><br>
-                <li>- Buffet or Plated meal options</li><br>
-                <li>- Indoor and Outdoor setup</li><br>
-                <li>- Specialized staff</li><br>
-                <li>- Custom cake</li><br>
-                <li>- Professional light service</li><br>
-                <li>- Photoshoot included</li><br>
+                <li>- Variety of menus<br></li>
+                <li>- Buffet or Plated meal options<br></li>
+                <li>- Indoor and Outdoor setup<br></li>
+                <li>- Specialized staff<br></li>
+                <li>- Custom cake<br></li>
+                <li>- Professional light service<br></li>
+                <li>- Photoshoot included<br></li>
             </ul>
         </div>   
         <img src="../../images/wedding.webp" alt="Temple Inn & Suites services">
@@ -109,6 +109,7 @@
             <hr>
             <p>© <span id="currentYear"></span> Temple Inn & Suites | Alvaro B. Godoy | WDD 230 Final Project<span> |</span></p>
             <p id="lastUpdate"></p>
+        </div>
         </div>
     </footer>
     <script src="../../js/menu.js"></script>
