--- a/temples/index.html
+++ b/temples/index.html
@@ -61,9 +61,10 @@
                 <h2>Holiness to the Lord</h2>              
                 <p>The House of the Lord</p>
             </div>
+        </div>
     </header>
     <main class="temples-main">
-        <h1>Temples</h2>
+        <h1>Temples</h1>
         <div class="statistics">
             <div class="temple-total">
                 <span class="temple-num">282</span>
@@ -107,6 +108,7 @@
             <p>© <span id="currentYear"></span> Temple Inn & Suites | Alvaro B. Godoy | WDD 230 Final Project<span> |</span></p>
             <p id="lastUpdate"></p>
         </div>
+    </div>
     </footer>
     <script src="../js/menu.js"></script>
     <script src="../js/footer.js"></script>
