--- a/index.html
+++ b/index.html
@@ -106,10 +106,11 @@
                 <p>info@templesuites.com</p>
                 <p>+1 (234) 5678-9012</p>
             </div>
-        <div class="course-info">
-            <hr>
-            <p>© <span id="currentYear"></span> Temple Inn & Suites | Alvaro B. Godoy | WDD 230 Final Project<span> |</span></p>
-            <p id="lastUpdate"></p>
+            <div class="course-info">
+                <hr>
+                <p>© <span id="currentYear"></span> Temple Inn & Suites | Alvaro B. Godoy | WDD 230 Final Project<span> |</span></p>
+                <p id="lastUpdate"></p>
+            </div>
         </div>
     </footer>
     <script src="./js/menu.js"></script>
