--- a/services/index.html
+++ b/services/index.html
@@ -68,25 +68,25 @@
         <div class="services">
             <h1>Our Services</h1>
             <ul>
-                <li>- Free access to changing rooms and bathroom facilities for temple patrons who have traveled far and need to change to and from church clothes</li><br>
-                <li>- A playroom and low-cost, short-term babysitting services for the children of patrons</li><br>
-                <li>- Long-term stay accommodations in kitchenette suites for full-time temple missionaries</li><br>
-                <li>- Temple history themed reception and sitting area</li><br>
-                <li>- A wedding reception hall that can be easily customized with a simple catering menu and kitchen access for food preparation and serving</li><br>
-                <li>- A family search center that supports family search and ordinance work</li><br>
+                <li>- Free access to changing rooms and bathroom facilities for temple patrons who have traveled far and need to change to and from church clothes<br></li>
+                <li>- A playroom and low-cost, short-term babysitting services for the children of patrons<br></li>
+                <li>- Long-term stay accommodations in kitchenette suites for full-time temple missionaries<br></li>
+                <li>- Temple history themed reception and sitting area<br></li>
+                <li>- A wedding reception hall that can be easily customized with a simple catering menu and kitchen access for food preparation and serving<br></li>
+                <li>- A family search center that supports family search and ordinance work<br></li>
             </ul>
         </div>
         <img src="../images/services.webp" alt="Temple Inn & Suites services">
         <div class="amenities">
             <h1>Free Amenities</h1>
             <ul>
-                <li>- Breakfast</li><br>
-                <li>- Exercise/workout room</li><br>
-                <li>- Indoor pool</li><br>
-                <li>- WiFi high-speed internet access and smart TVs</li><br>
-                <li>- Parking</li><br>
-                <li>- Temple shuttle</li><br>
-                <li>- Family history consultation and family ordinance card service</li><br>
+                <li>- Breakfast<br></li>
+                <li>- Exercise/workout room<br></li>
+                <li>- Indoor pool<br></li>
+                <li>- WiFi high-speed internet access and smart TVs<br></li>
+                <li>- Parking<br></li>
+                <li>- Temple shuttle<br></li>
+                <li>- Family history consultation and family ordinance card service<br></li>
             </ul>
         </div>   
         <img src="../images/service-hotel.webp" alt="Temple Inn & Suites services">
@@ -112,6 +112,7 @@
             <p>© <span id="currentYear"></span> Temple Inn & Suites | Alvaro B. Godoy | WDD 230 Final Project<span> |</span></p>
             <p id="lastUpdate"></p>
         </div>
+    </div>
     </footer>
     <script src="../js/menu.js"></script>
     <script src="../js/footer.js"></script>
